Mejorando seccion aula, procedo a iconos de la seccion

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
-import '../styles/tailwind.css';
-import Navbar from '../components/Navbar.astro';
-import Presentacion from '../components/Presentacion.astro';
+import "../styles/tailwind.css";
+import Navbar from "../components/Navbar.astro";
+import Imagen from "../components/Imagen.astro";
+import Presentacion from "../components/Presentacion.astro";
 ---
 
 <html lang="es">
@@ -11,6 +12,7 @@ import Presentacion from '../components/Presentacion.astro';
   </head>
   <body class="pt-16 bg-gray-100">
     <Navbar />
-	<Presentacion />
+    <Imagen />
+    <Presentacion />
   </body>
-</html>	
+</html>
