--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,17 +2,20 @@
 import "../styles/tailwind.css";
 import Navbar from "../components/Navbar.astro";
 import Imagen from "../components/Imagen.astro";
-import Presentacion from "../components/Presentacion.astro";
+import PresentacionAula from "../components/PresentacionAula.astro";
+import PresentacionVehiculos from "../components/PresentacionVehiculos.astro";
 ---
 
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
     <title>Autoescuela La Flor</title>
   </head>
   <body class="pt-16 bg-gray-100">
     <Navbar />
     <Imagen />
-    <Presentacion />
+    <PresentacionAula />
+    <PresentacionVehiculos />
   </body>
 </html>
