--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Navbar from "../components/Navbar.astro";
 import Imagen from "../components/Imagen.astro";
 import PresentacionAula from "../components/PresentacionAula.astro";
 import PresentacionVehiculos from "../components/PresentacionVehiculos.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <html lang="es">
@@ -17,5 +18,6 @@ import PresentacionVehiculos from "../components/PresentacionVehiculos.astro";
     <Imagen />
     <PresentacionAula />
     <PresentacionVehiculos />
+    <Footer />
   </body>
 </html>
