--- a/src/components/PresentacionAula.astro
+++ b/src/components/PresentacionAula.astro
@@ -1,4 +1,4 @@
-<section class="bg-white py-16 px-4">
+<section class="bg-white py-16 px-4 aula-slide">
     <div class="overflow-hidden bg-white py-6 sm:py-2">
         <div class="mx-auto max-w-7xl px-6 lg:px-8">
             <div
