--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,12 +5,16 @@ import Imagen from "../components/Imagen.astro";
 import PresentacionAula from "../components/PresentacionAula.astro";
 import PresentacionVehiculos from "../components/PresentacionVehiculos.astro";
 import Footer from "../components/Footer.astro";
+import Animaciones from "../components/Animaciones.astro";
 ---
 
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+      rel="stylesheet"
+    />
     <title>Autoescuela La Flor</title>
   </head>
   <body class="pt-16 bg-gray-100">
@@ -19,5 +23,6 @@ import Footer from "../components/Footer.astro";
     <PresentacionAula />
     <PresentacionVehiculos />
     <Footer />
+    <Animaciones />
   </body>
 </html>
