--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -3,7 +3,7 @@
     <div class="flex justify-between items-center h-16">
       <!-- Logo / Nombre -->
       <div class="flex-shrink-0">
-        <a href="/" class="text-xl font-bold text-blue-600">Autoescuela La Flor</a>
+        <a href="/" class="text-5xl italic text-blue-600 font-diamond">Autoescuela La Flor</a>
       </div>
 
       <!-- Links -->
@@ -14,4 +14,5 @@
         </div>
     </div>
   </div>
+
 </nav>
