--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,1 +1,13 @@
 @import "tailwindcss";
+
+@font-face {
+  font-family: 'Diamond';
+  src: url('/fonts/DiamondItalic.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+.font-diamond {
+  font-family: 'Diamond', sans-serif;
+}
