Añadido quienes somos, cambiados tamaños imagen y corregidas alineaciones en responsive

--- a/src/components/PresentacionAula.astro
+++ b/src/components/PresentacionAula.astro
@@ -97,11 +97,11 @@
                         </dl>
                     </div>
                 </div>
-                <div class="flex justify-center md:block">
+                <div class="flex justify-center lg:block">
                     <img
                         src="/images/aula.jpg"
                         alt="Product screenshot"
-                        class="max-w-full rounded-xl shadow-xl ring-1 ring-gray-400/10 sm:w-228"
+                        class="w-full sm:w-148 sm:h-88 aspect-[4/3] overflow-hidden rounded-xl shadow-xl ring-1 ring-gray-400/10"
                     />
                 </div>
             </div>
