--- a/src/components/PresentacionVehiculos.astro
+++ b/src/components/PresentacionVehiculos.astro
@@ -4,16 +4,16 @@
             <div
                 class="mx-auto lg:grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 sm:gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-2 flex flex-col-reverse items-center"
             >
-            <div class="flex justify-center md:block">
+            <div class="flex flex-col justify-center md:block">
                     <img
                         src="/images/coche.jpg"
                         alt="Product screenshot"
-                        class="max-w-full rounded-xl shadow-xl ring-1 ring-gray-400/10 sm:w-228 mb-4"
+                        class="w-full sm:w-148 sm:h-88 aspect-[4/3] overflow-hidden rounded-xl shadow-xl ring-1 ring-gray-400/10 mb-4"
                     />
                     <img
                         src="/images/moto.jpg"
                         alt="Product screenshot"
-                        class="max-w-full rounded-xl shadow-lg ring-1 ring-gray-400/10 sm:w-228 mb-2"
+                        class="w-full sm:w-148 sm:h-88 aspect-[4/3] overflow-hidden rounded-xl shadow-xl ring-1 ring-gray-400/10 mb-4"
                     />
                 </div>
                 <div class="lg:pt-4 lg:pl-8">
