--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -8,7 +8,8 @@
 
       <!-- Links -->
       <div class="hidden md:flex space-x-4">
-        <a href="#quienessomos" class="text-gray-700 hover:text-blue-600">Quiénes somos</a>
+        <a href="/" class="text-gray-700 hover:text-blue-600">Inicio</a>
+        <a href="/presentacion" class="text-gray-700 hover:text-blue-600">Quiénes somos</a>
         <a href="#cursos" class="text-gray-700 hover:text-blue-600">Cursos</a>
         <a href="#contacto" class="text-gray-700 hover:text-blue-600">Contacto</a>
         </div>
