--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import PresentacionAula from "../components/PresentacionAula.astro";
 import PresentacionVehiculos from "../components/PresentacionVehiculos.astro";
 import Footer from "../components/Footer.astro";
 import Animaciones from "../components/Animaciones.astro";
-import QuienesSomos from "../components/QuienesSomos.astro";
+import DondeEstamos from "../components/DondeEstamos.astro";
 ---
 
 <html lang="es">
@@ -21,7 +21,7 @@ import QuienesSomos from "../components/QuienesSomos.astro";
   <body class="pt-16 bg-gray-100">
     <Navbar />
     <Imagen />
-    <QuienesSomos />
+    <DondeEstamos />
     <PresentacionAula />
     <PresentacionVehiculos />
     <Footer />
