Modificado imagen.astro para que sea reutilizable, añadido a QuienesSomos.astro

--- a/src/components/Imagen.astro
+++ b/src/components/Imagen.astro
@@ -1,17 +1,17 @@
 ---
-
+const { title, p1, image, p2, reverse = false } = Astro.props;
 ---
 
 <section
     id="inicio"
     class="relative h-screen bg-cover bg-center flex items-center justify-center text-white"
-    style="background-image: url('/images/escaparate.jpg');"
+    style={`background-image: url('${image}');`}
     aria-label="Presentación de la autoescuela La Flor"
 >
     <div class="absolute inset-0 bg-gradient-to-b from-gray-800/80 via-gray-900/0 to-transparent"></div>
     <div class="p-8 rounded max-w-2xl text-center">
-        <h1 class="text-5xl font-bold mb-4">Autoescuela La Flor</h1>
-        <p class="text-xl mb-2">Tu camino hacia la conducción empieza aquí</p>
-        <p class="text-md">Estamos en Grado</p>
+        <h1 class="text-5xl font-bold mb-4">{title}</h1>
+        <p class="text-xl mb-2">{p1}</p>
+        <p class="text-md">{p2}</p>
     </div>
 </section>
