--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import DondeEstamos from "../components/DondeEstamos.astro";
   </head>
   <body class="pt-16 bg-gray-100">
     <Navbar />
-    <Imagen />
+    <Imagen title="Autoescuela La Flor" p1="Tu camino hacia la conducción empieza aquí" p2="Estamos en Grado" image="/images/escaparate.jpg"/>
     <DondeEstamos />
     <PresentacionAula />
     <PresentacionVehiculos />
