--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@
             </a>
             <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-gray-400">
                 <li>
-                    <a href="#" class="hover:underline me-4 md:me-6">Sobre nosotros</a>
+                    <a href="/QuienesSomos" class="hover:underline me-4 md:me-6">Sobre nosotros</a>
                 </li>
                 <li>
                     <a href="https://maps.app.goo.gl/PDZTowfnfgaiCUmV6" class="hover:underline me-4 md:me-6">Nuestra ubicación</a>
