--- a/src/pages/QuienesSomos.astro
+++ b/src/pages/QuienesSomos.astro
@@ -3,6 +3,7 @@
 import "../styles/tailwind.css";
 import Navbar from "../components/Navbar.astro";
 import Footer from "../components/Footer.astro";
+import Imagen from "../components/Imagen.astro";
 ---
 
 <html lang="es">
@@ -16,6 +17,11 @@ import Footer from "../components/Footer.astro";
     </head>
     <body class="pt-16 bg-gray-100">
         <Navbar />
+        <Imagen
+            title="Quiénes somos"
+            p1="Con más de 20 años de experiencia, somos la autoescuela líder en Grado."
+            p2="Nuestro equipo de profesionales está aquí para guiarte en cada paso del camino hacia tu licencia de conducir."
+            image="/images/conduccion.jpg"/>
         <Footer />
     </body>
 </html>
