--- a/src/pages/QuienesSomos.astro
+++ b/src/pages/QuienesSomos.astro
@@ -4,6 +4,8 @@ import "../styles/tailwind.css";
 import Navbar from "../components/Navbar.astro";
 import Footer from "../components/Footer.astro";
 import Imagen from "../components/Imagen.astro";
+import Tarjetas from "../components/Tarjetas.astro";
+import Animaciones from "../components/AnimacionesQuienesSomos.astro";
 ---
 
 <html lang="es">
@@ -22,6 +24,8 @@ import Imagen from "../components/Imagen.astro";
             p1="Con más de 20 años de experiencia, somos la autoescuela líder en Grado."
             p2="Nuestro equipo de profesionales está aquí para guiarte en cada paso del camino hacia tu licencia de conducir."
             image="/images/conduccion.jpg"/>
+        <Tarjetas />
         <Footer />
+        <Animaciones />
     </body>
 </html>
