--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Imagen from "../components/Imagen.astro";
 import PresentacionAula from "../components/PresentacionAula.astro";
 import PresentacionVehiculos from "../components/PresentacionVehiculos.astro";
 import Footer from "../components/Footer.astro";
-import Animaciones from "../components/Animaciones.astro";
+import Animaciones from "../components/AnimacionesIndex.astro";
 import DondeEstamos from "../components/DondeEstamos.astro";
 ---
 
