Cambiado formato imagen

--- a/src/pages/QuienesSomos.astro
+++ b/src/pages/QuienesSomos.astro
@@ -1,5 +1,4 @@
 ---
-// src/pages/quienes-somos.astro
 import "../styles/tailwind.css";
 import Navbar from "../components/Navbar.astro";
 import Footer from "../components/Footer.astro";
@@ -23,7 +22,7 @@ import Animaciones from "../components/AnimacionesQuienesSomos.astro";
             title="Quiénes somos"
             p1="Con más de 20 años de experiencia, somos la autoescuela líder en Grado."
             p2="Nuestro equipo de profesionales está aquí para guiarte en cada paso del camino hacia tu licencia de conducir."
-            image="/images/conduccion.jpg"/>
+            image="/images/conduccion.webp"/>
         <Tarjetas />
         <Footer />
         <Animaciones />
