--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -15,7 +15,7 @@
 
         <!-- Logo centrado en móvil, izquierda en lg -->
         <div class="flex-1 flex justify-center lg:justify-start">
-          <img class="h-8 w-auto" src="https://tailwindcss.com/plus-assets/img/logos/mark.svg?color=indigo&shade=500" alt="Your Company" />
+          <a href="/" class="text-5xl italic text-gray-300 font-diamond">Autoescuela La Flor</a>
         </div>
 
         <!-- Espacio invisible para compensar ancho botón, solo móvil -->
