--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -32,7 +32,7 @@
         <!-- Logo centrado en móvil, izquierda en lg -->
         <div class="flex-1 flex justify-center lg:justify-start">
           <a href="/" class="text-5xl italic text-gray-300 font-diamond"
-            >Autoescuela La Flor</a
+            >Autoescuela <span style="color: #ACD14E;">La Flor</span></a
           >
         </div>
 
