--- a/src/pages/QuienesSomos.astro
+++ b/src/pages/QuienesSomos.astro
@@ -5,6 +5,7 @@ import Footer from "../components/Footer.astro";
 import Imagen from "../components/Imagen.astro";
 import Tarjetas from "../components/Tarjetas.astro";
 import Animaciones from "../components/AnimacionesQuienesSomos.astro";
+import Resumen from "../components/Resumen.astro";
 ---
 
 <html lang="es">
@@ -19,11 +20,12 @@ import Animaciones from "../components/AnimacionesQuienesSomos.astro";
     <body class="pt-16 bg-gray-100">
         <Navbar />
         <Imagen
-            title="Quiénes somos"
-            p1="Con más de 20 años de experiencia, somos la autoescuela líder en Grado."
+            title="¿Quiénes somos?"
+            p1="Con más de 30 años de experiencia, somos una de las 20 mejores autoescuelas de toda Asturias."
             p2="Nuestro equipo de profesionales está aquí para guiarte en cada paso del camino hacia tu licencia de conducir."
-            image="/images/conduccion.webp"/>
+            image="/images/conduccion.webp"/>   
         <Tarjetas />
+        <Resumen />
         <Footer />
         <Animaciones />
     </body>
