--- a/src/components/Resumen.astro
+++ b/src/components/Resumen.astro
@@ -20,7 +20,7 @@
         <h3 class="text-xl font-semibold text-[#73904B] mb-2">
           Instructores expertos
         </h3>
-        <p class="text-gray-300">
+        <p class="text-gray-300 card-text">
           Profesionales con años de experiencia que te acompañan paso a paso y
           se adaptan a tu ritmo.
         </p>
@@ -29,7 +29,7 @@
       <!-- Tarjeta 2 -->
       <div class="rounded-2xl shadow-md p-6 border border-gray-200">
         <h3 class="text-xl font-semibold text-[#73904B] mb-2">Compromiso</h3>
-        <p class="text-gray-300">
+        <p class="text-gray-300 card-text">
           Nos implicamos en tu aprendizaje desde el primer día hasta que tengas
           el carnet en la mano.
         </p>
@@ -41,7 +41,7 @@
           <h3 class="text-xl font-semibold text-[#73904B] mb-2">
             Aprende con confianza
           </h3>
-          <p class="text-gray-300">
+          <p class="text-gray-300 card-text">
             En Autoescuela La Flor nos aseguramos de que te sientas cómodo durante
             las clases. De esta manera facilitamos mucho más el aprendizaje.
           </p>
