--- a/src/components/Resumen.astro
+++ b/src/components/Resumen.astro
@@ -16,32 +16,32 @@
 
     <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3 mb-12">
       <!-- Tarjeta 1 -->
-      <div class="rounded-2xl shadow-md p-6 border border-gray-200">
+      <div class="rounded-2xl shadow-md p-6 border border-gray-200 text-center lg:text-left">
         <h3 class="text-xl font-semibold text-[#73904B] mb-2">
           Instructores expertos
         </h3>
-        <p class="text-gray-300 card-text">
+        <p class="text-gray-300 card-text text-center lg:text-left">
           Profesionales con años de experiencia que te acompañan paso a paso y
           se adaptan a tu ritmo.
         </p>
       </div>
 
       <!-- Tarjeta 2 -->
-      <div class="rounded-2xl shadow-md p-6 border border-gray-200">
+      <div class="rounded-2xl shadow-md p-6 border border-gray-200 text-center lg:text-left">
         <h3 class="text-xl font-semibold text-[#73904B] mb-2">Compromiso</h3>
-        <p class="text-gray-300 card-text">
+        <p class="text-gray-300 card-text text-center lg:text-left">
           Nos implicamos en tu aprendizaje desde el primer día hasta que tengas
           el carnet en la mano.
         </p>
       </div>
 
       <!-- Tarjeta 3 centrada, tamaño fijo, ocupa 2 columnas en sm y 1 en lg -->
-      <div class="sm:col-span-2 lg:col-span-1 flex justify-center">
+      <div class="sm:col-span-2 lg:col-span-1 flex justify-center text-center lg:text-left">
         <div class="rounded-2xl shadow-md p-6 border border-gray-200 md:max-w-[600px] w-full">
           <h3 class="text-xl font-semibold text-[#73904B] mb-2">
             Aprende con confianza
           </h3>
-          <p class="text-gray-300 card-text">
+          <p class="text-gray-300 card-text text-center lg:text-left">
             En Autoescuela La Flor nos aseguramos de que te sientas cómodo durante
             las clases. De esta manera facilitamos mucho más el aprendizaje.
           </p>
