Cambiado enlace a cursos Navbar

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -53,7 +53,7 @@
           >Quiénes Somos</a
         >
         <a
-          href="#"
+          href="/Cursos"
           class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white"
           >Cursos</a
         >
